--- a/samples/RedisCacheSample/project.json
+++ b/samples/RedisCacheSample/project.json
@@ -7,6 +7,18 @@
     "Microsoft.Extensions.Caching.Redis": "1.0.0-*"
   },
   "frameworks": {
-    "net451": {}
+    "net451": { },
+    "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "version": "1.0.0-*",
+          "type": "platform"
+        }
+      },
+      "imports": [
+        "dnxcore50",
+        "portable-net451+win8"
+      ]
+    }
   }
 }
